# sierpinski

./: CMakeLists.txt  README.md  sierpinski.scad
include/: sierpinski.hpp
src/: CMakeLists.txt  sierpinski.cpp
tst/: CMakeLists.txt  basictests.cpp  test.cpp  test1d.cpp  test2d.cpp  test3d.cpp
